<resources>
    <string name="app_name">WelliBe</string>
    <string name="home">Home</string>
    <string name="my_visits">My Visits</string>
    <string name="new_visit">New Visit</string>
    <string name="add_new_visit">Add New Visit</string>
    <string name="view_my_visits">View My Visits</string>
    <string name="Settings">Settings</string>
    <string name="Logout">Logout</string>
    <string name="open_drawer">Open</string>
    <string name="close_drawer">Close</string>
    <string name="help">Help</string>
    <string name="sign_in">Sign-In</string>
    <string name="sign_up">Sign-Up</string>

    <!-- Strings related to login / register-->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_login">Login</string>
    <string name="action_register">Register</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be > 5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="prompt_confirm_password">Confirm password</string>
    <string name="full_name">Full name</string>
    <string name="banner_intro">Circles of Gratitude</string>
    <string name="sign_up_offer">Don\'t have an account? <font color='#01C6DB'>Sign Up.</font></string>
    <string name="sign_in_offer">Already have an account? <font color='#01C6DB'>Sign In.</font></string>

    <string name="new_visit_summary_prompt">What did the doctor tell you?</string>
    <string name="save_new_visit">Save new visit</string>

    <string-array name="doctor_patient_str_array">
        <item> ---Select--- </item>
        <item>Patient</item>
        <item>Doctor</item>
    </string-array>


    <!-- Strings related to QR generator & scanner-->
    <string name="qr_code">qr_code</string>
    <string name="scan_dr_qr_code">Press to scan the Dr\'s QR-code:</string>
    <string name="action_settings">Settings</string>
    <string name="seeking_qr_code">Seeking QR code..</string>

</resources>