<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SignInFragment"
    android:theme="@style/WelliBe">

    <TextView
        android:id="@+id/tv_banner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/banner_intro"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/et_email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:gravity="left"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/colorSecondaryLight"
        app:layout_constraintBottom_toTopOf="@id/btn_login"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.67"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:gravity="left"
        android:hint="@string/prompt_password"
        android:textColorHint="@color/colorSecondaryLight"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@id/btn_login"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_email"/>

    <Button
        android:id="@+id/btn_login"
        android:background="@drawable/login_button"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/action_login"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textSize="@dimen/browser_actions_context_menu_min_padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.55" />

    <TextView
        android:id="@+id/tv_sign_up_offer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_offer"
        app:layout_constraintRight_toRightOf="@id/btn_login"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.1"
        />

</androidx.constraintlayout.widget.ConstraintLayout>