<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpFragment"
    android:theme="@style/WelliBe">

    <EditText
        android:id="@+id/et_full_name"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/full_name"
        android:textColorHint="@color/colorSecondaryLight"
        android:inputType="text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.13"/>
    <EditText
        android:id="@+id/et_email"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_email"
        android:textColorHint="@color/colorSecondaryLight"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.22"/>
    <EditText
        android:id="@+id/et_pass"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_password"
        android:textColorHint="@color/colorSecondaryLight"
        android:inputType="textPassword"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.31"/>
    <EditText
        android:id="@+id/et_confirm_pass"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_confirm_password"
        android:textColorHint="@color/colorSecondaryLight"
        android:inputType="textPassword"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.40"/>
    <Spinner
        android:id="@+id/spinner_doc_pat"
        android:layout_width="255dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="@id/et_confirm_pass"
        app:layout_constraintLeft_toLeftOf="@id/et_confirm_pass"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.50"
        android:entries="@array/doctor_patient_str_array"
        android:spinnerMode="dropdown"
        style="@android:style/Widget.Material.Light.Spinner"
        />


    <Button
        android:id="@+id/btn_register"
        android:background="@drawable/login_button"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/action_register"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textSize="@dimen/browser_actions_context_menu_min_padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.63" />

    <TextView
        android:id="@+id/tv_sign_in_offer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_offer"
        app:layout_constraintRight_toRightOf="@id/btn_register"
        app:layout_constraintTop_toBottomOf="@id/btn_register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.1"

        />

</androidx.constraintlayout.widget.ConstraintLayout>