<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:id="@+id/new_visit_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewVisitFragment">

    <TextView
        android:id="@+id/tv_data_n_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginStart="40dp"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tv_doctor_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/scan_dr_qr_code"
        android:layout_gravity="start|top"
        android:layout_marginTop="110dp"
        android:layout_marginStart="40dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    <ImageView
        android:id="@+id/iv_code_scanner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_baseline_qr_code_scanner_64"
        app:layout_anchor="@id/tv_doctor_name"
        app:layout_anchorGravity="end|bottom"
        android:layout_gravity="end|center_vertical"

        />

    <EditText
        android:id="@+id/et_visit_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:inputType="textMultiLine"
        android:lines="14"
        android:layout_gravity="center_vertical|bottom"
        app:layout_anchorGravity="bottom"
        app:layout_anchor="@id/iv_code_scanner"
        android:gravity="top"
        android:hint="@string/new_visit_summary_prompt"
        android:background="@drawable/custom_et"
        android:padding="10dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_new_visit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:clickable="true"
        android:focusable="true"
        android:scaleType="center"
        android:elevation="28dp"
        android:layout_gravity="end|bottom"
        app:srcCompat="@drawable/ic_baseline_add_48"
        app:maxImageSize="48dp"
        android:contentDescription="@string/save_new_visit"
        app:fabSize="normal"
        android:backgroundTint="@color/colorSecondary"
        app:borderWidth="0dp"
        app:rippleColor="@color/colorPrimaryLight"

         />
</androidx.coordinatorlayout.widget.CoordinatorLayout>