<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/iv_qr_code"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:hint="Loading.."/>
        <ImageView
            android:id="@+id/iv_qr_code"
            android:layout_width="300dp"
            android:layout_height="300dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="130dp"
            android:contentDescription="@string/qr_code" />

        <TextView
            android:id="@+id/tv_hearts_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_qr_code"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.15"
            android:textColor="@color/colorSecondaryDark"
            android:textSize="24sp"/>

        <com.like.LikeButton
            android:id="@+id/btn_heart"
            android:layout_width="80dp"
            android:layout_height="80dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_hearts_count"
            app:anim_scale_factor="4"
            app:circle_end_color="@color/colorSecondaryLight"
            app:circle_start_color="#F1DD31"
            app:dots_primary_color="#0E77CC"
            app:dots_secondary_color="#FF1A4F"
            app:icon_size="20dp"
            app:icon_type="heart"
            app:liked="true"
            app:is_enabled="true"
            android:visibility="gone"/>

        <Button
            android:id="@+id/btn_add_new_visit"
            android:background="@drawable/login_button"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/add_new_visit"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textSize="@dimen/browser_actions_context_menu_min_padding"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.70"
            android:visibility="gone"
            android:clickable="true"
            android:focusable="true"/>
        <Button
            android:id="@+id/btn_view_my_visits"
            android:background="@drawable/login_button"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/view_my_visits"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:clickable="true"
            android:textSize="@dimen/browser_actions_context_menu_min_padding"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_add_new_visit"
            app:layout_constraintVertical_bias="0.25"
            android:visibility="gone"
            android:focusable="true" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>